feat: added base authentication on the frontend application, integrated with the jwt on the backend
